# trip_planner

./: .flake8  .gitignore  Dockerfile  Pipfile  README.md  assets.md  bsconfig.json  conftest.py  docker-compose.yml  gulpfile.js  gunicorn.config.py  manage.py  package-lock.json  package.json  pg.env.example  postcss.config.js  pyproject.toml  rollup.config.js  tailwind.config.js  webpack.config.js
.circleci/: config.yml
.github/workflows/: build.yml  main.yml
assets/: .gitignore
assets/css/: _bootstrap-custom.scss  _breakpoints.scss  _buttons.scss  _collapsible-map.scss  _collapsible.scss  _colors.scss  _cssvars.scss  _flashes.scss  _forms.scss  _geocode.scss  _icons.scss  _layout.scss  _links.scss  _login-form.scss  _map-with-coords.scss  _palette.scss  _plume-custom.scss  _point-schedule.scss  _point-show.scss  _prelude.scss  _scale.scss  _top-header.scss  _trip-show.scss  _trips-index.scss  _typography.scss  _variables.scss  app.css  app.scss  breadcrumbs.scss  buttons.css  buttons.scss  form.css  form.scss  geocode.scss  plume-build.scss  poi-form.scss  point-form.css  point-form.scss  show-poi.scss  show.css  (+6 more)
assets/js/: DomBinds.re  Map.re  TripShow.re  TripShow.rei  app.js  bootstrap_custom.js  geocode.js  map.js  point_form.js  shared_app.js  tailwind.json  trip_form.js  trip_show.js  utils.js
assets/scripts/: build.js  build.py  compile-js.js  compile-sass.js
assets/templatetags/: assets.py
locations/: admin.py  helpers.py  map_data.py  models.py  queries.py  views.py
locations/migrations/: 0001_initial.py  0002_alter_city_options_alter_pointofinterest_options_and_more.py
locations/templatetags/: point_data.py
migrations/versions/: 362c777d6919_remove_slug_from_trip.py  4410c334f8ab_.py  4a0fe58677a9_added_center_to_trip.py  577ed6333051_added_key_to_trip.py  58eabb673ad2_adding_updated_at_to_points_and_trips.py  5ab8813b5e28_making_slug_nullable_again.py  6167b5c96ab3_added_privacy_options_to_trip_and_point.py  8344badab728_changing_coordinate_types.py  b4b1ed4da917_adding_new_schedule_field.py  (+6 more)
scripts/: favicon_export
test/: __init__.py  auth_test.py  conftest.py  factories.py  test_app.py  test_auth.py  test_trips.py  trips_test.py
trip_planner/: __init__.py  asgi.py  assets.py  bs_classes.py  config.py  context_processors.py  data.py  home_views.py  models.py  result.py  settings.py  shared.py  tailwind.py  urls.py  view_classes.py  wsgi.py
trips/: admin.py  models.py
(+125 files in other folders)
