[tool.poetry]
name = "trip_planner"
version = "1.0.0"
description = ""
authors = ["Artemiy Solopov <art-solopov@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "~=2.0"
SQLAlchemy = "~=1.3"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
WTForms = "~=2.2"
passlib = "^1.7.4"
bcrypt = "^3.2.0"
Flask-WTF = "^1.0.0"
psycopg2 = "~=2.9"
requests = "~=2.27"
python-box = "^5.4.1"
gunicorn = "^20.1.0"
beautifulsoup4 = "~=4.10"

[tool.poetry.dev-dependencies]
jedi = ">=0.18"
flake8 = "^4.0.1"
Faker = "^11.3.0"
factory-boy = "^3.2.1"
pytest = "^6.2.5"
pytest-mock = "^3.6.1"
python-lsp-server = "~=1.3"
ipython = "~=8.10"
ujson = "~=5.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
